--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,5 +8,5 @@ html(lang="#{I18n.locale}")
     = csrf_meta_tags
     = content_for?(:head) ? yield(:head) : nil
 
-  body
+  body(class="#{controller.controller_name}")
     = content_for?(:body) ? yield(:body) : yield
