--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -2,7 +2,7 @@
   = form.label :title
   = form.text_field :title
   = form.label :body
-  = form.text_field :body
+  = form.text_area :body
   = form.label :is_hidden
   = form.check_box :is_hidden
   = form.submit
