--- a/app/views/entries/index.html.slim
+++ b/app/views/entries/index.html.slim
@@ -1,8 +1,10 @@
-ul.entries-list
-  - @entries.each do |e|
-    li
-      h4 = link_to e.title, entry_path(e)
-      h5 = e.updated_at
-      p = e.body
+section.container
+  ul.entries-list
+    - @entries.each do |e|
+      li
+        h4 = link_to e.title, entry_path(e)
+        h5 = e.updated_at
+        p = e.body
+        = link_to '続きを読む', entry_path(e), class: 'button'
 
-= paginate @entries
+  = paginate @entries
