prepare the design

--- a/app/assets/stylesheets/entries-index.css.scss
+++ b/app/assets/stylesheets/entries-index.css.scss
@@ -1,5 +1,11 @@
 .entries{
   .entries-list {
     list-style: none;
+    h5 {
+      letter-spacing: 0.1rem;
+    }
+  }
+  .pager {
+    text-align: center;
   }
 }
