--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,3 +11,4 @@ html(lang="#{I18n.locale}")
   body(class="#{controller.controller_name}")
     = render 'share/header'
     = content_for?(:body) ? yield(:body) : yield
+    = render 'share/footer'
