--- a/app/assets/stylesheets/entries-index.css.scss
+++ b/app/assets/stylesheets/entries-index.css.scss
@@ -4,6 +4,10 @@
     h5 {
       letter-spacing: 0.1rem;
     }
+    li {
+      border-bottom: .1rem solid #d1d1d1;
+      margin-bottom: 3rem;
+    }
   }
   .pager {
     text-align: center;
