fix sitename with entry #show

--- a/app/views/entries/show.html.slim
+++ b/app/views/entries/show.html.slim
@@ -1,5 +1,5 @@
 - content_for(:head) do
-  - set_meta_tags title: "#{@entry.title} #{I18n.t('.meta.site.separator')} #{I18n.t('.meta.site.name')}"
+  - set_meta_tags title: "#{@entry.title}"
 
 section.entry.container
   section.header
