Implement RSS feed

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype 5
 html(lang="#{I18n.locale}")
   head
     meta(charset="UTF-8")
-    link(rel='alternate', hreflang="#{locale}")
+    link(rel='alternate', hreflang="#{locale}"
     = display_meta_tags(default_meta_tags)
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
