--- a/app/views/share/_header.html.slim
+++ b/app/views/share/_header.html.slim
@@ -2,3 +2,5 @@ nav.navigation
   section.container
     section.float-left
       = link_to I18n.t('.meta.site.name'), entries_path, class: 'site-title'
+    section.float-right
+      = link_to 'RSS', rss_path, class: 'site-title'
